force-app/main/default/objects/DispatchLocation__c/DispatchLocation__c.object-meta.xml
<CustomObject>
    <label>Dispatch Location</label>
    <nameField>
        <displayFormat>DL-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispatch Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>