force-app/main/default/objects/DispatchLocation__c/fields/BinCount__c.field-meta.xml
<CustomField>
    <fullName>BinCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bin Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>