force-app/main/default/objects/DispatchLocation__c/fields/Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Dispatch__c</fullName>
    <label>Dispatch</label>
    <referenceTo>DailyDispatch__c</referenceTo>
    <relationshipLabel>Dispatch Locations</relationshipLabel>
    <relationshipName>DispatchLocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>