force-app/main/default/objects/DispatchLocation__c/fields/IsBinCollection__c.field-meta.xml
<CustomField>
    <fullName>IsBinCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bin Collection?</label>
    <type>Checkbox</type>
</CustomField>