force-app/main/default/objects/DispatchLocation__c/fields/IsInternalCollection__c.field-meta.xml
<CustomField>
    <fullName>IsInternalCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Collection?</label>
    <type>Checkbox</type>
</CustomField>