force-app/main/default/objects/DispatchLocation__c/fields/LatestArrival__c.field-meta.xml
<CustomField>
    <fullName>LatestArrival__c</fullName>
    <label>Latest Arrival</label>
    <type>Time</type>
</CustomField>