force-app/main/default/objects/DispatchLocation__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dispatch Locations</relationshipLabel>
    <relationshipName>DispatchLocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>