force-app/main/default/objects/DispatchLocation__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <label>Sequence Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>