force-app/main/default/objects/DispatchLocation__c/fields/SequenceNumberRaaS__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumberRaaS__c</fullName>
    <label>Sequence Number (RaaS)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>