force-app/main/default/objects/DispatchLocation__c/fields/ServiceTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceTime__c</fullName>
    <label>Service Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>