force-app/main/default/objects/DispatchLocation__c/fields/SubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>SubmittedAt__c</fullName>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>