force-app/main/default/objects/DispatchLocation__c/fields/SubmittedFrom__c.field-meta.xml
<CustomField>
    <fullName>SubmittedFrom__c</fullName>
    <label>Submitted From</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>